Add preprocessing and clean up specs

--- a/notebooks/01_data_analysis.ipynb
+++ b/notebooks/01_data_analysis.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -19,11 +19,318 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\u001b[1m\u001b[36mApplications\u001b[m\u001b[m \u001b[1m\u001b[36mUsers\u001b[m\u001b[m        \u001b[1m\u001b[36mcores\u001b[m\u001b[m        \u001b[35mhome\u001b[m\u001b[m         \u001b[1m\u001b[36msbin\u001b[m\u001b[m         \u001b[35mvar\u001b[m\u001b[m\n",
+            "\u001b[1m\u001b[36mLibrary\u001b[m\u001b[m      \u001b[1m\u001b[36mVolumes\u001b[m\u001b[m      \u001b[1m\u001b[36mdev\u001b[m\u001b[m          \u001b[1m\u001b[36mopt\u001b[m\u001b[m          \u001b[35mtmp\u001b[m\u001b[m\n",
+            "\u001b[1m\u001b[36mSystem\u001b[m\u001b[m       \u001b[1m\u001b[36mbin\u001b[m\u001b[m          \u001b[35metc\u001b[m\u001b[m          \u001b[1m\u001b[36mprivate\u001b[m\u001b[m      \u001b[1m\u001b[36musr\u001b[m\u001b[m\n"
+          ]
+        }
+      ],
+      "source": [
+        "!ls "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Repo root: /Users/eseide/Stanford/CME-241/cme241-rl-discounts\n",
+            "Sequences path: /Users/eseide/Stanford/CME-241/cme241-rl-discounts/data/processed/training_sequences.parquet\n",
+            "Features path: /Users/eseide/Stanford/CME-241/cme241-rl-discounts/data/processed/training_features.parquet\n"
+          ]
+        }
+      ],
+      "source": [
+        "from pathlib import Path\n",
+        "\n",
+        "\n",
+        "def _find_repo_root(start: Path) -> Path:\n",
+        "    for parent in [start, *start.parents]:\n",
+        "        if (parent / \"pyproject.toml\").exists():\n",
+        "            return parent\n",
+        "    raise FileNotFoundError(\"Could not find repo root (pyproject.toml).\")\n",
+        "\n",
+        "\n",
+        "repo_root = _find_repo_root(Path.cwd())\n",
+        "processed_dir = repo_root / \"data\" / \"processed\"\n",
+        "sequences_path = processed_dir / \"training_sequences.parquet\"\n",
+        "features_path = processed_dir / \"training_features.parquet\"\n",
+        "\n",
+        "if not sequences_path.exists():\n",
+        "    sequences_path = processed_dir / \"training_sequences.csv\"\n",
+        "if not features_path.exists():\n",
+        "    features_path = processed_dir / \"training_features.csv\"\n",
+        "\n",
+        "print(f\"Repo root: {repo_root}\")\n",
+        "print(f\"Sequences path: {sequences_path}\")\n",
+        "print(f\"Features path: {features_path}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sequences shape: (2595732, 19)\n",
+            "Features shape: (2595732, 22)\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>transaction_id</th>\n",
+              "      <th>household_key</th>\n",
+              "      <th>basket_id</th>\n",
+              "      <th>day</th>\n",
+              "      <th>product_id</th>\n",
+              "      <th>quantity</th>\n",
+              "      <th>sales_value</th>\n",
+              "      <th>store_id</th>\n",
+              "      <th>retail_disc</th>\n",
+              "      <th>trans_time</th>\n",
+              "      <th>week_no</th>\n",
+              "      <th>coupon_disc</th>\n",
+              "      <th>coupon_match_disc</th>\n",
+              "      <th>coupon_available</th>\n",
+              "      <th>coupon_upc</th>\n",
+              "      <th>campaign</th>\n",
+              "      <th>coupon_used</th>\n",
+              "      <th>coupon_upc_used</th>\n",
+              "      <th>sequence_index</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>46996</td>\n",
+              "      <td>1</td>\n",
+              "      <td>27601281299</td>\n",
+              "      <td>51</td>\n",
+              "      <td>825123</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3.99</td>\n",
+              "      <td>436</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>1456</td>\n",
+              "      <td>8</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>False</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>False</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>46997</td>\n",
+              "      <td>1</td>\n",
+              "      <td>27601281299</td>\n",
+              "      <td>51</td>\n",
+              "      <td>831447</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2.99</td>\n",
+              "      <td>436</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>1456</td>\n",
+              "      <td>8</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>False</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>False</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>46998</td>\n",
+              "      <td>1</td>\n",
+              "      <td>27601281299</td>\n",
+              "      <td>51</td>\n",
+              "      <td>840361</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1.09</td>\n",
+              "      <td>436</td>\n",
+              "      <td>-0.30</td>\n",
+              "      <td>1456</td>\n",
+              "      <td>8</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>False</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>False</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>46999</td>\n",
+              "      <td>1</td>\n",
+              "      <td>27601281299</td>\n",
+              "      <td>51</td>\n",
+              "      <td>845307</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3.71</td>\n",
+              "      <td>436</td>\n",
+              "      <td>-0.62</td>\n",
+              "      <td>1456</td>\n",
+              "      <td>8</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>False</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>False</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>47000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>27601281299</td>\n",
+              "      <td>51</td>\n",
+              "      <td>852014</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2.79</td>\n",
+              "      <td>436</td>\n",
+              "      <td>-1.20</td>\n",
+              "      <td>1456</td>\n",
+              "      <td>8</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>False</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>False</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   transaction_id  household_key    basket_id  day  product_id  quantity  \\\n",
+              "0           46996              1  27601281299   51      825123         1   \n",
+              "1           46997              1  27601281299   51      831447         1   \n",
+              "2           46998              1  27601281299   51      840361         1   \n",
+              "3           46999              1  27601281299   51      845307         1   \n",
+              "4           47000              1  27601281299   51      852014         1   \n",
+              "\n",
+              "   sales_value  store_id  retail_disc  trans_time  week_no  coupon_disc  \\\n",
+              "0         3.99       436         0.00        1456        8          0.0   \n",
+              "1         2.99       436         0.00        1456        8          0.0   \n",
+              "2         1.09       436        -0.30        1456        8          0.0   \n",
+              "3         3.71       436        -0.62        1456        8          0.0   \n",
+              "4         2.79       436        -1.20        1456        8          0.0   \n",
+              "\n",
+              "   coupon_match_disc  coupon_available  coupon_upc  campaign  coupon_used  \\\n",
+              "0                0.0             False         NaN       NaN        False   \n",
+              "1                0.0             False         NaN       NaN        False   \n",
+              "2                0.0             False         NaN       NaN        False   \n",
+              "3                0.0             False         NaN       NaN        False   \n",
+              "4                0.0             False         NaN       NaN        False   \n",
+              "\n",
+              "   coupon_upc_used  sequence_index  \n",
+              "0              NaN               0  \n",
+              "1              NaN               1  \n",
+              "2              NaN               2  \n",
+              "3              NaN               3  \n",
+              "4              NaN               4  "
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "def _load_table(path: Path) -> pd.DataFrame:\n",
+        "    if not path.exists():\n",
+        "        raise FileNotFoundError(\n",
+        "            f\"Missing file: {path}. Run `make preprocess` to create it.\"\n",
+        "        )\n",
+        "    if path.suffix == \".parquet\":\n",
+        "        return pd.read_parquet(path)\n",
+        "    return pd.read_csv(path)\n",
+        "\n",
+        "sequences = _load_table(sequences_path)\n",
+        "features = _load_table(features_path)\n",
+        "\n",
+        "print(\"Sequences shape:\", sequences.shape)\n",
+        "print(\"Features shape:\", features.shape)\n",
+        "\n",
+        "sequences.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "features.head()\n"
+      ]
     }
   ],
   "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
