--- a/notebooks/dp_walkthrough.ipynb
+++ b/notebooks/dp_walkthrough.ipynb
@@ -36,8 +36,7 @@
    "source": [
     "## 1. Setup & Load Parameters\n",
     "\n",
-    "Repository URL: `https://github.com/EthanSei/cme241-rl-discounts`\n",
-    "If code links in notebook comments are not clickable in an exported PDF, use this URL directly.\n",
+    "Repository URL: `https://github.com/EthanSei/cme241-rl-discounts`. For source code, see `src/discount_engine/core/` and `src/discount_engine/dp/`.\n",
     "\n",
     "### Quick Start (Run This Notebook)\n",
     "From the repository root:\n",
@@ -182,7 +181,7 @@
     "\n",
     "**State** $s = (c, \\mathbf{m}, \\boldsymbol{\\ell})$:\n",
     "- $c$ — churn propensity bucket (Engaged / At-Risk / Lapsing)\n",
-    "- $\\mathbf{m} = (m_1, \\ldots, m_N)$ — per-category memory of past promotions (EWMA)\n",
+    "- $\\mathbf{m} = (m_1, \\ldots, m_N)$ — per-category memory of past promotions (exponentially weighted moving average, EWMA)\n",
     "- $\\boldsymbol{\\ell} = (\\ell_1, \\ldots, \\ell_N)$ — per-category recency since last purchase\n",
     "\n",
     "**Action** $a \\in \\{0, 1, \\ldots, N\\}$: promote category $a$ (0 = no promotion).\n",
@@ -201,7 +200,7 @@
     "\n",
     "$$R(s, a) = \\sum_{\\mathbf{b} \\in \\{0,1\\}^N} \\left[\\prod_i P(\\text{buy}_i)^{b_i}(1-P(\\text{buy}_i))^{1-b_i}\\right] \\cdot \\sum_i b_i \\cdot p^{\\text{eff}}_i$$\n",
     "\n",
-    "**Demand-model simplification note:** Phase 1 described demand via a perceived-deal/reference-price mechanism (memory inside perceived deal). Phase 2 uses the additive-separable form above, with memory as its own term. This Version C simplification improves tractability; with fitted `beta_m ≈ 0`, the quantitative impact is negligible in this run.\n",
+    "**Demand-model simplification note:** Phase 1 described demand via a perceived-deal/reference-price mechanism (memory inside perceived deal). Phase 2 uses the additive-separable form above, with memory as its own term. With `beta_m ≈ 0` (Section 12), this simplification has negligible quantitative impact.\n",
     "\n",
     "**Deal signal mode:** The DP uses `positive_centered_anomaly` (**promotion produces a positive deal signal; no-promotion produces zero**), where $d_i$ is read from `promotion_deal_signal` in `mdp_params.yaml` (stored as `product_logit_bump / beta_p`, so $\\beta_p \\cdot d_i$ recovers the product-level logit bump used in calibration transfer). See Section 5 for details.\n"
    ]
@@ -217,7 +216,7 @@
     "\n",
     "**Key calibration choices:**\n",
     "- **Deal signal contract:** Calibration uses `price_delta_dollars` ($d_i = p_i \\cdot \\delta$). The DP uses `positive_centered_anomaly` with per-product deal signals (see Section 5).\n",
-    "- **Time resolution:** Weekly aggregation — daily data made churn/recency dynamics invisible (see Section 6).\n",
+    "- **Time resolution:** Weekly aggregation — daily data obscured churn/recency dynamics (see Section 6).\n",
     "- **Categories:** Explicit selection of FLUID MILK + ICE CREAM + FROZEN PIZZA (see Section 4).\n",
     "- **Alpha selection:** Updated grid search over $\\alpha \\in \\{0.00, 0.30, 0.50, 0.70, 0.85, 0.90, 0.95, 0.99\\}$ using a time-based validation split. The calibration uses household-level deal exposure (binary: did this household purchase at a discount?) as the memory signal.\n",
     "- **Memory result:** Calibration selected $\\alpha = 0.95$ with $\\beta_m \\approx 0$; full diagnostics and sensitivity checks are in Section 12.\n"
@@ -1006,13 +1005,13 @@
     "\n",
     "`mdp_params.yaml` sets `deal_signal_mode: positive_centered_anomaly`, with `promotion_deal_signal = product_logit_bump / beta_p` for each category.\n",
     "\n",
-    "**Parameter consistency:** this is a re-parameterization of the signal units, not a slope change. The model term `beta_p · d_i` reconstructs the original product-level logit bump used for transfer into DP.\n",
+    "**Parameter consistency:** this is a re-parameterization of signal units, not a slope change. The model term `beta_p · d_i` reconstructs the product-level logit bump used for transfer into DP.\n",
     "\n",
     "**Result:** product-level signals are **3–9x** stronger than category-level signals.\n",
     "\n",
     "**Causal caveat:** these bumps are observational and may include confounding (e.g., placement effects, brand effects, promotion timing). Causal estimation would require exogenous variation (e.g., randomized promotion assignment or valid instruments).\n",
     "\n",
-    "**Observed implication:** one category (Ice Cream) dominates all states, producing policy collapse (Section 8) and motivating a richer Phase 3 action space.\n"
+    "**Policy implication:** as shown in Section 8, the coarse action space plus these signal differences yields policy collapse to a single category action.\n"
    ]
   },
   {
@@ -1022,7 +1021,7 @@
    "source": [
     "## 6. Daily vs. Weekly Resolution\n",
     "\n",
-    "The original calibration used **daily** time steps. This made churn and recency dynamics invisible:\n",
+    "The original calibration used **daily** time steps. This obscured churn and recency dynamics:\n",
     "\n",
     "| Parameter | Daily | Weekly | Why it matters |\n",
     "|-----------|-------|--------|----------------|\n",
@@ -1307,21 +1306,20 @@
    "source": [
     "### Policy Structure and Interpretation\n",
     "\n",
-    "With product-level deal signals, `alpha=0.95`, and `beta_m≈0`, the optimal policy selects **Promote Ice Cream** in all 648 live states.\n",
+    "With product-level deal signals, `alpha=0.95`, and `beta_m≈0` (Section 12), the optimal policy selects **Promote Ice Cream** in all 648 live states.\n",
     "\n",
     "**Mechanism:**\n",
     "- Ice Cream has the largest absolute promotion bump (5.83 deal-signal units; logit bump 2.31) and the highest price level ($2.59), yielding the highest expected value contribution in Bellman updates.\n",
-    "- With `beta_m ≈ 0`, repeated promotion has no estimated memory penalty.\n",
     "- The action ranking remains stable across churn buckets, so no state-dependent switching occurs.\n",
     "\n",
     "**Implications:**\n",
     "1. With only four actions (no promo + three categories), the strongest category can dominate globally.\n",
-    "2. Q-gaps are positive but modest (mean 0.49, range 0.27–0.87), indicating a consistent but thin advantage.\n",
+    "2. Q-gaps are positive but modest (mean 0.49, range 0.27–0.87), indicating a consistent but narrow advantage.\n",
     "3. The value of promotion is concentrated in churn prevention rather than action differentiation.\n",
     "\n",
-    "As noted in Section 2, Phase 2 uses an additive-separable demand form; with `beta_m≈0`, this simplification has negligible impact on the policy ranking in this run.\n",
+    "As noted in Section 2, Phase 2 uses an additive-separable demand form; this simplification has negligible impact on policy ranking under calibrated parameters.\n",
     "\n",
-    "In this run, action 2 (Promote Ice Cream) is selected in every churn segment; Frozen Pizza is consistently second-best.\n"
+    "Under the calibrated parameters, action 2 (Promote Ice Cream) is selected in every churn segment; Frozen Pizza is consistently second-best.\n"
    ]
   },
   {
@@ -1483,8 +1481,7 @@
    "source": [
     "## 10. Q-Gap Diagnostics\n",
     "\n",
-    "The Q-gap measures how much better the optimal action is than the next best alternative.\n",
-    "A small gap means the policy is nearly indifferent; a large gap means the choice is clear."
+    "The Q-gap measures how much better the optimal action is than the next-best alternative.\n"
    ]
   },
   {
@@ -1578,9 +1575,7 @@
    "source": [
     "## 11. Baseline Comparisons\n",
     "\n",
-    "Baselines are evaluated with **iterative policy evaluation**:\n",
-    "$V^\\pi(s) = R(s, \\pi(s)) + \\gamma \\sum_{s'} P(s'|s,\\pi(s)) \\, V^\\pi(s')$,\n",
-    "solved to convergence for each fixed policy. This reports the true long-run value of following that policy, rather than a Q* one-step proxy.\n",
+    "Baselines are evaluated via iterative policy evaluation (solved to convergence), reporting true long-run value under each fixed policy.\n",
     "\n",
     "Interpretation: values are infinite-horizon discounted **weekly** values (`gamma=0.99`, effective horizon ≈100 weeks).\n",
     "\n",
@@ -1983,7 +1978,7 @@
     "| Original (ambient signal, grid to 0.40) | 0.0 | 0.006 | Signal too noisy to identify memory effect |\n",
     "| Extended grid only (ambient signal, grid to 0.95) | 0.0 | 0.006 | Grid extension alone does not change conclusion |\n",
     "| **Household memory** (hh signal, updated grid incl. 0.99) | **0.95** | **≈ 0** | High-alpha region covered; memory effect still null |\n",
-    "| 0.99 sensitivity check (household signal) | 0.99 | ≈ 0 | Validation NLL differs by ~2.7e-4 vs 0.95 (immaterial) |\n",
+    "| 0.99 sensitivity check (household signal) | 0.99 | ≈ 0 | Validation **negative log-likelihood (NLL)** differs by ~2.7e-4 vs 0.95 (immaterial) |\n",
     "\n",
     "### Interpretation\n",
     "\n",
@@ -1991,7 +1986,7 @@
     "\n",
     "### Consequence for Phase 2 DP\n",
     "\n",
-    "Phase 2 keeps `alpha = 0.95` and `beta_m ≈ 0`. The memory dimension remains in the state representation but contributes little to policy differentiation in this run.\n",
+    "Phase 2 keeps `alpha = 0.95` and `beta_m ≈ 0`. The memory dimension remains in the state representation but contributes little to policy differentiation under the calibrated parameters.\n",
     "\n",
     "For Phase 3, SKU-level modeling may recover additional variation in household deal exposure and provide a stronger test of memory effects.\n"
    ]
@@ -2157,7 +2152,7 @@
    "source": [
     "### Verification: Memory State Has No Effect on Q-Values\n",
     "\n",
-    "Since `beta_m ≈ 0`, the memory dimension should not affect Q-values. We confirm this by checking Q-value variation across memory states for a fixed churn/recency configuration."
+    "With `beta_m ≈ 0` (Section 12), the memory dimension should not materially affect Q-values. We confirm this by checking Q-value variation across memory states for a fixed churn/recency configuration.\n"
    ]
   },
   {
@@ -2308,7 +2303,7 @@
    "id": "sensitivity-interpretation",
    "metadata": {},
    "source": [
-    "The table above shows that Q-values are effectively invariant across memory states. In this run, `beta_m ≈ 0` makes memory a weak decision variable, so policy differences are driven primarily by churn and promotion-response structure rather than memory buckets.\n"
+    "The table above shows that Q-values are effectively invariant across memory states. Under the calibrated parameters, `beta_m ≈ 0` (Section 12) makes memory a weak decision variable, so policy differences are driven primarily by churn and promotion-response structure rather than memory buckets.\n"
    ]
   },
   {
@@ -2383,27 +2378,22 @@
     "|---|---|---|\n",
     "| **Policy collapse** (single action across all states) | No state-conditional promotion strategy | Per-product DQN with hundreds of actions |\n",
     "| **Coarse action space** (4 actions: no promo + 3 categories) | Best category dominates regardless of state | SKU-level actions enable differentiation |\n",
-    "| **Memory dimension is inert** (`beta_m ≈ 0`) | MDP has unnecessary state dimension | Product-level deal exposure may provide variation for calibration |\n",
+    "| **Memory dimension is inert** (`beta_m ≈ 0`, Section 12) | MDP has unnecessary state dimension | Product-level deal exposure may provide variation for calibration |\n",
     "| **Observational deal signals** (not causal) | Product logit bumps include selection bias | A/B testing or instrumental variable approaches |\n",
     "| **Fixed 30% discount depth** | Cannot optimize discount amount | Continuous discount actions in DQN |\n",
     "| **3-category scope** | Narrow product coverage | Full product catalog in Phase 3 |\n",
     "\n",
-    "### Why Policy Collapse Is Expected\n",
+    "### Policy-Collapse Context\n",
     "\n",
-    "The Phase 2 MDP has 648 states but only 4 actions. With `beta_m ≈ 0` eliminating memory effects:\n",
-    "- In this calibrated run, dynamic-state effects are too small to overturn the static promotion advantage of Ice Cream.\n",
-    "- Ice Cream's deal signal (5.83) dominates Frozen Pizza (5.25) and Milk (2.28) in every state.\n",
-    "- The Q-gap is consistently positive but modest (mean 0.49, median 0.38, range 0.27–0.87), confirming a thin but persistent advantage.\n",
-    "\n",
-    "This behavior is expected under the current model specification: the action space is too coarse to express state-conditional strategies.\n",
+    "As shown in Section 8, the coarse action space combined with `beta_m ≈ 0` (Section 12) produces policy collapse to a single category action across all 648 live states. The Q-gap remains positive but modest (mean 0.49, median 0.38, range 0.27–0.87).\n",
     "\n",
     "### What Phase 3 (DQN) Changes\n",
     "\n",
-    "1. **Per-product actions**: Instead of \"promote Ice Cream category,\" the agent selects specific SKUs. With hundreds of products, the optimal product genuinely varies by customer state.\n",
+    "1. **Per-product actions**: Instead of \"promote Ice Cream category,\" the agent selects specific SKUs. With hundreds of products, the optimal product can vary by customer state.\n",
     "2. **Continuous state space**: No discretization loss from bucketing memory, recency, and churn into 3×3×2 grids per category.\n",
     "3. **Richer features**: Household demographics, seasonal patterns, basket composition — all available in the Dunnhumby data but unused by the tabular DP.\n",
-    "4. **Natural memory calibration**: With per-product actions, memory accumulates from actual product-level deal exposure. The household-level variation that was missing at the category level may emerge at the SKU level.\n",
-    "5. **Gymnasium environment**: The `MarketEnv` will simulate individual shopping trips, enabling the DQN to learn from sequential interaction rather than pre-computed transition kernels.\n"
+    "4. **Natural memory calibration**: With per-product actions, memory accumulates from actual product-level deal exposure. The household-level variation missing at category level may emerge at SKU level.\n",
+    "5. **Gymnasium environment**: `MarketEnv` will simulate individual shopping trips, enabling DQN training from sequential interaction rather than pre-computed transition kernels.\n"
    ]
   },
   {
@@ -2415,15 +2405,15 @@
     "\n",
     "### What the DP Found\n",
     "\n",
-    "1. **Category actions cannot fully exploit product heterogeneity.** Product-level deal signals are 3–9x larger than category averages, but with only four actions the strongest category dominates.\n",
+    "1. **Category actions cannot fully exploit product heterogeneity.** Product-level deal signals are 3–9x larger than category averages, but with only four actions the strongest category dominates (Section 8).\n",
     "\n",
-    "2. **No category-level discount-addiction effect was identified.** With household-level memory features and alpha coverage through `0.99`, calibration still yields `beta_m ≈ 0`.\n",
+    "2. **No category-level discount-addiction effect was identified.** With household-level memory features and alpha coverage through `0.99`, calibration still yields `beta_m ≈ 0` (Section 12).\n",
     "\n",
     "3. **Weekly aggregation is material.** Moving from daily to weekly time steps makes churn and recency effects identifiable at the planning horizon used by DP.\n",
     "\n",
-    "4. **Value gain is large in discounted long-run terms.** Iterative policy evaluation shows ~82% overall improvement vs. never-promote, concentrated in high-churn states (~160% in Lapsing). Using annuity-equivalent scaling (`(1-\\gamma)V`), with `\\gamma=0.99`: `(1-0.99) × 335.28 ≈ $3.35/week` and `(1-0.99) × 184.33 ≈ $1.84/week` (delta ~$1.51/week).\n",
+    "4. **Value gain is large in discounted long-run terms.** Iterative policy evaluation shows ~82% overall improvement vs. never-promote, concentrated in high-churn states (~160% in Lapsing). In annuity-equivalent terms, this is ≈$3.35/week vs. ≈$1.84/week (Δ ≈ $1.51/week).\n",
     "\n",
-    "5. **Policy collapse is consistent with the modeled action granularity.** With `beta_m≈0` and only category-level actions, a single category can remain optimal across all states.\n",
+    "5. **As shown in Section 8, the coarse action space produces policy collapse.** With `beta_m ≈ 0` (Section 12), one category remains optimal across all states under calibrated parameters.\n",
     "\n",
     "6. **Connection to course themes.**\n",
     "   - **Curse of Modeling:** key behavior (memory/adaptation) is weak at category level in this dataset.\n",
@@ -2434,7 +2424,7 @@
     "\n",
     "| Decision | Rationale | Reference |\n",
     "|----------|-----------|----------|\n",
-    "| Weekly aggregation | Daily resolution suppressed churn/recency dynamics | Section 6 of this notebook |\n",
+    "| Weekly aggregation | Daily resolution obscured churn/recency dynamics | Section 6 of this notebook |\n",
     "| Mixed categories | Staple-only set produced trivially conservative policy | Sections 4 and 8 of this notebook |\n",
     "| Product-level deal signals | Category signals too diluted; product targeting yields 3–9x uplift | Section 5 of this notebook |\n",
     "| Household-level memory + α=0.99 check | High-alpha region tested; `beta_m≈0` persists and α=0.99 is not materially different | Section 12 of this notebook |\n",
